--- a/YatsinaPolina_coursework№2.ipynb
+++ b/YatsinaPolina_coursework№2.ipynb
@@ -8,9 +8,7 @@
    },
    "source": [
     "# Курсовая работа № 2\n",
-    "## Аналитика. Начальный уровень\n",
     "\n",
-    "Курсовая работа состоит из двух частей – обязательной и дополнительной. **Для зачета необходимо выполнение только первой части.** Выполнение второй части может потребовать дополнительные знания Python.\n",
     "\n",
     "- [Часть первая](#Часть-первая)\n",
     "- [Часть вторая](#Часть-вторая)"
@@ -26,16 +24,10 @@
     "## Часть первая\n",
     "\n",
     "\n",
-    "Перед вами стоит задача – подготовить аналитический отчет для HR-отдела. На основании проведенной аналитики предполагается составить рекомендации для отдела кадров по стратегии набора персонала, а также по взаимодействию с уже имеющимися сотрудниками.\n",
-    "<br><br> В базе данных лежит набор таблиц, которые содержат данные о сотрудниках вымышленной компании.\n",
-    "Сделайте обзор штата сотрудников компании. Составьте набор предметов исследования, а затем проверьте их на данных. Вся аналитика должна быть выполена с помощью SQL. Впоследствии данные можно визуализировать, однако финальные датафреймы для графиков также должны быть подготовлены с помощью SQL. <br><br>\n",
-    "\n",
-    "Примеры гипотез:\n",
-    "1. Есть зависимость между `perfomance score` и тем, под чьим руководством работает сотрудник.\n",
-    "2. Есть зависимость между продолжительностью работы в компании и семейным положением сотрудника.\n",
-    "2. Есть зависимость между продолжительностью работы в компании и возрастом сотрудника.\n",
-    "\n",
-    "<br><br>\n",
+    "Перед вами стоит задача – подготовить аналитический отчет для HR-отдела. \n",
+    "<br>\n",
+    "В базе данных лежит набор таблиц, которые содержат данные о сотрудниках вымышленной компании.\n",
+    "<br>\n",
     "Параметры для подключения следующие: хост – `dsstudents.skillbox.ru`, порт – `5432`, имя базы данных – `human_resources`, пользователь – `readonly`, пароль – `6hajV34RTQfmxhS`. Таблицы, доступные для анализа, – `hr_dataset`, `production_staff`, `recruting_costs`, `salary_grid`."
    ]
   },
@@ -52,7 +44,6 @@
     "### YOUR CODE HERE ###\n",
     "import psycopg2\n",
     "import pandas as pd\n",
-    "import sqlite3\n",
     "\n",
     "pg_connection = {\n",
     "    \"host\": \"dsstudents.skillbox.ru\",\n",
@@ -1332,10 +1323,8 @@
     "id": "8vS_kLIvHVAV"
    },
    "source": [
-    "Перед вами стоит задача – подготовить аналитический ответ для SMM-отдела компании Skillbox. <br> Объектом анализа является  [паблик Skillbox Вконтакте](https://vk.com/skillbox_education). <br> <br> \n",
-    "Подключитесь к  API VK и выгрузите посты со стены паблика Skillbox за интересующий период (определите самостоятельно и обоснуйте). Проанализируйте влияние различных факторов (например, времени публикации) на вовлеченность пользователей (количество лайков, комментариев, голосов в опросах). Сделайте аналитику по рубрикам (примеры рубрик: дизайн-битва, игра по управлению), которые есть в паблике. Выбрать нужные посты можно с помощью регулярных выражений. Составьте перечень рекомандаций для SMM-отдела по итогам анализа. <br> <br> \n",
-    "\n",
-    "Дополнительные инструкции по работе с API VK расположены [здесь](https://nbviewer.jupyter.org/github/vikaborel/dstutorials/blob/master/Дополнительные%20инструкции.ipynb)."
+    "Перед вами стоит задача – подготовить аналитический ответ для SMM-отдела компании Skillbox. <br> Объектом анализа является  [паблик Skillbox Вконтакте](https://vk.com/skillbox_education).\n",
+    "\n"
    ]
   },
   {
